filter, map and reduce implemented and test cases changed for JFilter interface changes.